=================
Changes for Crate
=================

Unreleased
==========

 - Updated Elasticsearch to 1.5.2

 - Fix: Removed unnecessary close context calls on CollectContext

 - Select queries will now wait a bit longer before throwing an error in case
   the shards of a table aren't fully active.

 - Updated crash to version 0.12.0 which contains the following changes:

    - added ``--version`` to cli interface to show crash version and exit

    - Fixed broken 'mixed' output style due to overriding import

    - Improved readability of sql syntax highlighting

    - Attempting to use unknown command now results in an error

 - Fix: In some cases a ``DROP TABLE`` statment does not delete all
   partitions. Now it's possible to repeat the statement in order
   to delete the orphaned partitions.

 - Added the IF NOT EXISTS clause to the CREATE TABLE statement

2015/05/07 0.49.0
=================

 - Fix: performing queries on a partitioned table could cause unnecessary
   ``execution rejected`` errors

 - Add plugin support

 - Removed the limitation that the WHERE clause couldn't contain certain
   expressions in `select count(*)` queries.

 - update crate-admin to 0.12.0 which contains the following changes:

    - display ``rest_url`` from sys.nodes table on node detail view

 - Expose REST URL of node in ``sys.nodes`` table

 - Increased speed and reduced amount of used memory on sorted queries

 - Ordering by `_score` must be defined explictly now even when using a
   `match` predicate.
   Note: This is a backward incompatibility change.

2015/05/07 0.48.4
=================

NOTE: Upgrading from 0.47 or earlier versions requires a full cluster restart

 - Fix: fix update queries on partitioned tables which are partitioned
   by part of the primary key

 - Fix: correctly display initial and reset settings in ``sys.cluster.settings``

 - add dynamic settings ``bulk.request_timeout`` and ``bulk.partition_creation_timeout``
